prevent text resize on iOS

--- a/maxwell/static/css/maxwell.css
+++ b/maxwell/static/css/maxwell.css
@@ -1,5 +1,8 @@
 html {
     min-height: 100%;
+    -webkit-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
 }
 
 body {
